[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/buttons or icons/sound on icon.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons or icons/sound off icon.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/challenge button.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=4]
[ext_resource path="res://sprites/background/sky bg.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/rounded rectangular popup.png" type="Texture" id=6]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Game Play/Challenge/StudentNameButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game Play/Challenge/ChallengeePage.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 7 )

[node name="ChallengeePage" type="CanvasLayer"]
script = ExtResource( 9 )
StudentButton = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
margin_bottom = 6.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 1787.72
margin_top = 13.8284
margin_right = 1908.72
margin_bottom = 107.828
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 1779.0
margin_top = 6.0
margin_right = 1923.0
margin_bottom = 114.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoticePopup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -468.0
margin_right = 767.0
margin_bottom = 470.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeeLabel" type="Label" parent="NoticePopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -407.5
margin_top = 92.0
margin_right = 408.5
margin_bottom = 196.0
custom_fonts/font = SubResource( 1 )
text = "Challengee"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeButton" type="TextureButton" parent="NoticePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -231.5
margin_top = -218.0
margin_right = 288.5
margin_bottom = -90.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBox" type="LineEdit" parent="NoticePopup"]
margin_left = 136.0
margin_top = 200.0
margin_right = 1416.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "Enter name to search"

[node name="ScrollContainer" type="ScrollContainer" parent="NoticePopup"]
margin_left = 136.0
margin_top = 304.0
margin_right = 1408.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NoticePopup/ScrollContainer"]
custom_constants/separation = 125

[node name="TopicLabel" type="Label" parent="NoticePopup"]
margin_left = 1088.0
margin_top = 736.0
margin_right = 1400.0
margin_bottom = 824.0
custom_fonts/font = SubResource( 3 )
text = " "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="NoticePopup/ChallengeButton" to="." method="_on_ChallengeButton_pressed"]
